sumo/tests/sumo/extended/emitter/errors/routedist/missing_id/vehroutes.sumo
<?xml version="1.0"?>

<!-- generated on 04/17/08 12:06:32 by SUMO sumo Version 0.9.7
<configuration>

   <input>
      <net-file>three_split.net.xml</net-file>
      <additional-files>input_routes.rou.xml,input_additional.add.xml</additional-files>
   </input>

   <output>
      <vehroute-output>vehroutes.xml</vehroute-output>
   </output>

   <processing>
      <no-duration-log>true</no-duration-log>
      <no-step-log>true</no-step-log>
   </processing>

</configuration>
-->

<routes>
</routes>
